[gd_scene load_steps=4 format=3 uid="uid://cfhp0jvuxr2qf"]

[ext_resource type="Script" path="res://players_ui.gd" id="1_4oars"]
[ext_resource type="Theme" uid="uid://b6curcx6e1af1" path="res://theme.tres" id="1_uemre"]
[ext_resource type="FontFile" uid="uid://d1teqk7eurwmp" path="res://Fonts/BroshK.ttf" id="3_qguwr"]

[node name="PlayersUI" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_uemre")
script = ExtResource("1_4oars")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 832.0
offset_top = 322.0
offset_right = 1088.0
offset_bottom = 757.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="ScorePanel" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2i(256, 0)
offset_right = 256.0
offset_bottom = 164.0
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScorePanel"]
offset_right = 256.0
offset_bottom = 164.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScorePanel/MarginContainer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 246.0
offset_bottom = 154.0

[node name="Label" type="Label" parent="VBoxContainer/ScorePanel/MarginContainer/VBoxContainer"]
offset_right = 69.0
offset_bottom = 30.0
size_flags_horizontal = 0
text = "SCORE"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScorePanel/MarginContainer/VBoxContainer"]
offset_top = 34.0
offset_right = 236.0
offset_bottom = 38.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScorePanel/MarginContainer/VBoxContainer"]
offset_top = 42.0
offset_right = 236.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScorePanel/MarginContainer/VBoxContainer/MarginContainer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 226.0
offset_bottom = 92.0
columns = 2

[node name="RedLabel" type="Label" parent="VBoxContainer/ScorePanel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
offset_right = 55.0
offset_bottom = 39.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.772549, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qguwr")
theme_override_font_sizes/font_size = 35
text = "Red: "

[node name="RedScore" type="Label" parent="VBoxContainer/ScorePanel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
offset_left = 71.0
offset_right = 110.0
offset_bottom = 39.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.772549, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qguwr")
theme_override_font_sizes/font_size = 35
text = "0/0"

[node name="BlueLabel" type="Label" parent="VBoxContainer/ScorePanel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
offset_top = 43.0
offset_right = 67.0
offset_bottom = 82.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0.87451, 1)
theme_override_fonts/font = ExtResource("3_qguwr")
theme_override_font_sizes/font_size = 35
text = "Blue: "

[node name="BlueScore" type="Label" parent="VBoxContainer/ScorePanel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
offset_left = 71.0
offset_top = 43.0
offset_right = 110.0
offset_bottom = 82.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0.87451, 1)
theme_override_fonts/font = ExtResource("3_qguwr")
theme_override_font_sizes/font_size = 35
text = "0/0"

[node name="SpymasterPanel" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2i(256, 0)
offset_top = 194.0
offset_right = 256.0
offset_bottom = 323.0
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/SpymasterPanel"]
offset_right = 256.0
offset_bottom = 129.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SpymasterPanel/MarginContainer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 246.0
offset_bottom = 119.0

[node name="Label" type="Label" parent="VBoxContainer/SpymasterPanel/MarginContainer/VBoxContainer"]
offset_right = 142.0
offset_bottom = 30.0
size_flags_horizontal = 0
text = "SPYMASTERS"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/SpymasterPanel/MarginContainer/VBoxContainer"]
offset_top = 34.0
offset_right = 236.0
offset_bottom = 38.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/SpymasterPanel/MarginContainer/VBoxContainer"]
offset_top = 42.0
offset_right = 236.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpymasterList" type="ItemList" parent="VBoxContainer/SpymasterPanel/MarginContainer/VBoxContainer/MarginContainer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 226.0
offset_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true
text_overrun_behavior = 1

[node name="JoinSpymastersButton" type="Button" parent="VBoxContainer/SpymasterPanel/MarginContainer/VBoxContainer"]
offset_top = 66.0
offset_right = 236.0
offset_bottom = 109.0
text = "Join"

[node name="PlayerPanel" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2i(256, 0)
offset_top = 353.0
offset_right = 256.0
offset_bottom = 435.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PlayerPanel"]
offset_right = 256.0
offset_bottom = 82.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PlayerPanel/MarginContainer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 246.0
offset_bottom = 72.0

[node name="Label" type="Label" parent="VBoxContainer/PlayerPanel/MarginContainer/VBoxContainer"]
offset_right = 92.0
offset_bottom = 30.0
size_flags_horizontal = 0
text = "PLAYERS"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/PlayerPanel/MarginContainer/VBoxContainer"]
offset_top = 34.0
offset_right = 236.0
offset_bottom = 38.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PlayerPanel/MarginContainer/VBoxContainer"]
offset_top = 42.0
offset_right = 236.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="PlayerList" type="ItemList" parent="VBoxContainer/PlayerPanel/MarginContainer/VBoxContainer/MarginContainer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 226.0
offset_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true
text_overrun_behavior = 1

[connection signal="pressed" from="VBoxContainer/SpymasterPanel/MarginContainer/VBoxContainer/JoinSpymastersButton" to="." method="_on_join_spymasters_button_pressed"]
